# global-challenge

./: .gitignore  ETAPAS_FALTANTES.md  LIMPEZA_PROJETO.md  ORGANIZACAO_PROJETO_E_INTEGRACAO_FRONTEND.md  PROJETO_DOCUMENTACAO.md  README.md  README_ESTRATEGIA_HIBRIDA.md  RELATORIO_FASE_4_1.md  REORGANIZACAO_PROJETO.md  TEST_RESULTS.md  final_api_report.json  requirements.txt
.cursor/: projeto-alertas-cheias.code-snippets  prompts.md  rules  settings.json
app/: main.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py
architecture-demo/api-backend/: Makefile  README.md
architecture-demo/infrastructure/: README.md
architecture-demo/ml-platform/: Makefile  README.md
architecture-demo/shared/: README.md
backup_20250606_150858/docs/: MODEL.md
backup_20250606_150858/notebooks/: 1_exploratory_analysis.ipynb  3_model_evaluation.ipynb  5_model_architecture_experiments.ipynb  README.md
backup_20250606_150858/scripts/: advanced_forecast_collector.py  collect_openmeteo_hybrid_new.py  data_preprocessing_fixed.py  data_split.py  ensemble_model_trainer.py  init_db.sql  inmet_exploratory_analysis.py  migrate_to_new_architecture.py  phase_2_2_atmospheric_feature_engineering.py  phase_2_3_completion_summary.py  phase_2_3_quality_analysis.py  quality_visualization_analysis.py  setup_data.py  test_forecast_domain.py  train_hybrid_model.py  train_model.py  training_pipeline.py
configs/: model_config_examples.json
data/analysis/: phase_2_3_completion_report.html  processing_report.json
data/metadata/: consolidated_by_year_20250603_223018.json  data_quality_report_20250603_223018.json  data_summary.json
data/processed/: FASE_2_2_RESUMO_IMPLEMENTACAO.md  annual_statistics_2000_2024.csv  atmospheric_features_metadata_20250606_113900.json  data_collection_report.json  forecasts.json  inmet_unified_data.csv  metadata.json  open_meteo_daily_2000_2024.parquet  openmeteo_historical_forecast.csv  openmeteo_historical_forecast_consolidated.parquet  preprocessing_report.json  test_data.csv  test_data.parquet  test_y.npy  train_data.parquet  train_y.npy  validation_data.csv  validation_data.parquet  validation_y.npy  weather_data.json
data/raw/: openmeteo_forecast_analysis.json
data/validation/: openmeteo_validation_report_20250606_113116.json  openmeteo_validation_report_20250606_113209.json  quality_report_20250606_114350.json  validation_INMET_S_RS_A801_PORTO ALEGRE - JARDIM BOTANICO_01-01-2022_A_31-12-2022_20250603_223449.json  validation_INMET_S_RS_A801_PORTO ALEGRE - JARDIM BOTANICO_01-01-2023_A_31-12-2023_20250603_223450.json  (+12 more)
docker/: Dockerfile.api  Dockerfile.training  README.md  docker-compose.yml  env.docker.example  nginx.conf  prometheus.yml
docs/: 4_day_forecast_strategy.md  API.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_PROPOSAL.md  ARCHITECTURE_SUMMARY.md  DATA.md  DEPLOYMENT.md  acuracia_atual_open_meteo.md  fase3-1-modelo-lstm.md  solucao_completa_4dias.md
frontend/: README.md  index.html
notebooks/: 0_data_pipeline.ipynb  1_exploratory_analysis.ipynb  2_model_training.ipynb  4_model_validation.ipynb  6_practical_examples.ipynb  7_api_integration.ipynb  README.md
project-docs/: ESTRUTURA_E_FUNCIONAMENTO.md  FASE_4_COMPLETA.md  INTEGRACAO_COMPLETA_ETAPAS_1_2_3.md  README.md
project-utils/: Makefile  pyproject.toml
reports/: test_results_hybrid_strategy_20250606_111333.json
requirements/: base.txt  development.txt  production.txt
scripts/: analyze_openmeteo_apis.py  collect_open_meteo_data.py  collect_open_meteo_robust.py  collect_open_meteo_simple.py  collect_openmeteo_forecast.py  collect_openmeteo_hybrid_data.py  collect_openmeteo_progressive.py  consolidate_openmeteo_chunks.py  convert_notebooks.py  create_new_architecture_demo.py  data_preprocessing.py  data_preprocessing_fixed.py  data_split.py  demo_hybrid_strategy.py  exploratory_analysis.py  hybrid_tensorflow_trainer.py  migrate_to_new_architecture.py  prepare_training_data.py  process_existing_data.py  setup_data.py  test_alerts_domain.py  test_complete_api.py  test_external_apis_basic.py  test_fase5_completa.py  test_forecast_domain.py  test_hybrid_strategy.py  test_model_validation.py  test_simple_api.py  train_hybrid_lstm_model.py  train_lstm_model.py  train_model.py  train_sklearn_model.py  training_pipeline.py  validate_data.py  validate_openmeteo_data.py
tests/: __init__.py  test_api_integration.py  test_dependencies.py  test_forecast_repository.py  test_weather_repository.py
tests-results/: check_implementation.py  run_tests.py  simple_check.py  test_repo.py
(+178 files in other folders)
